--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,33 @@
-$primary: #00f;
+.navbar {
+  .nav-link {
+    font-size: 14px;
+    text-transform: uppercase;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
 
-h1 {
-  color: $primary;
+  .nav-item.active {
+    border-left: #444 3px solid;
+  }
+}
+
+.carousel {
+  &-item {
+    height: 450px;
+  }
+
+  &-image-1 {
+    background: url('../img/image1.jpg');
+    background-size: cover;
+  }
+
+  &-image-2 {
+    background: url('../img/image2.jpg');
+    background-size: cover;
+  }
+
+  &-image-3 {
+    background: url('../img/image3.jpg');
+    background-size: cover;
+  }
 }
