--- a/scss/style.scss
+++ b/scss/style.scss
@@ -83,3 +83,24 @@ body {
 .about-img {
   margin-top: -50px;
 }
+
+#faq {
+  .card {
+    border: #444;
+  }
+
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  .card-body,
+  .card-header {
+    background: #333;
+  }
+}
+
+#main-footer {
+  background: #000;
+  color: #fff;
+}
